@@ -1,3 +1,7 @@
+2014-02-22  Kouhei Sutou  <kou@cozmixng.org>
+
+        * test/rexml/xpath/test_attribute.rb: Simplify.
+
 Sat Feb 22 20:28:47 2014  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* tool/redmine-backporter.rb: more friendly.
